# API-FastAPI

./: .env.example  .gitignore  Dockerfile  README.md
.github/workflows/: pipeline.yaml  pipeline.yml
curso_fastapi/: pyproject.toml
curso_fastapi/migrations/: env.py
curso_fastapi/migrations/versions/: a65c0769d183_create_users_table.py  fe8a89e51878_create_column_updated_at_on_users_table.py
curso_fastapi/src/curso_fastapi/: app.py  models.py  settings.py
curso_fastapi/tests/: conftest.py  test_app.py  test_models.py
fastapi_course/: compose.yaml  entrypoint.sh  pyproject.toml  schemas.py  security.py  services.py
fastapi_course/fastapi_course/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_course/fastapi_course/routers/: auth.py  users.py
fastapi_course/migrations/: env.py
fastapi_course/migrations/versions/: 28b2bd45794f_create_users_table.py  2f7ebfac9153_create_todo_table.py  d9651766c4c6_create_field_updated_at.py
fastapi_course/routers/: todos.py  users.py
fastapi_course/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
fastapi_zero/: README.md  pyproject.toml
fastapi_zero/src/fastapi_zero/: app.py
fastapi_zero/tests/: test_app.py
migrations/: env.py
migrations/versions/: 9db709a497f1_create_table_users.py  cebde90c1185_create_attrs_created_at_and_update_at_.py
tests/: conftest.py  test_db.py  test_users.py
